Add profile photo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <img class="profile-avatar" src="https://dummyimage.com/96x96/eee/aaa" alt="">
+            <img class="profile-avatar" src="./src/img/profile.jpeg" alt="Foto de perfil do Gilberto">
             <div class="profile-bio">
                 <h1 class="profile-bio-name">Página do Gilberto</h1>
                 <h2 class="profile-bio-subtitle">Desenvolvedor Full Stack Java</h2>
