Add social media and email links

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         <nav>
             <ul class="social-media-links">
                 <li>
-                    <a href="">
+                    <a href="https://www.instagram.com/gilbert0.br/" target="_blank">
                     <img src="./src/img/instagram.svg" alt="Ícone do Instagram">
                 </a>
             </li>
                 <li>
-                    <a href="">
+                    <a href="https://www.linkedin.com/in/gilberto-paiva-melo/" target="_blank">
                     <img src="./src/img/linkedin.svg" alt="Ícone do LinkedIn">
                 </a>
             </li>
                 <li>
-                    <a href="">
+                    <a href="https://github.com/GilbertoPaiva" target="_blank">
                     <img src="./src/img/github.svg" alt="Ícone do GitHub">
                 </a>
             </li>
                 <li>
-                    <a href="">
+                    <a href="mailto:gilberto.melo.paiva@gmail.com">
                     <img src="./src/img/mail.svg" alt="Ícone do E-mail">
                 </a>
             </li>
